# ercot-project

./: .gitattributes  .gitignore  CHANGELOG  README.md  ercot-tracking.py  ercot.db  pipeline_checkpoint.json  pyproject.toml  test.db  test_checkpoint.json
.github/workflows/: ci.yml  docs.yml
_data/: 60d_DAM_Generation_Resource_ASOffers-30-JAN-25.csv  60d_DAM_QSE_Self_Arranged_AS-30-JAN-25.csv  7pm-test-db.test-db  ercot.db  ercot_data.db  ercot_data.db-journal  ercot_download_checkpoint.json  ercot_download_checkpoint.json.bak  test_134-ercot.db-journal  test_ercot_data.db-journal
_data/sample_data/: 60d_DAM_EnergyBidAwards-30-JAN-25.csv  60d_DAM_EnergyBids-30-JAN-25.csv  60d_DAM_PTP_Obligation_Option-30-JAN-25.csv
config/: archive-openapi.yaml  bundle-openapi.yaml
data/: 60d_DAM_EnergyOnlyOfferAwards-30-JAN-25.csv  60d_DAM_EnergyOnlyOffers-30-JAN-25.csv  60d_DAM_Gen_Resource_Data-30-JAN-25.csv  60d_DAM_Load_Resource_ASOffers-30-JAN-25.csv  60d_DAM_Load_Resource_Data-30-JAN-25.csv  60d_DAM_PTPObligationBidAwards-30-JAN-25.csv  60d_DAM_PTPObligationBids-30-JAN-25.csv  60d_DAM_PTP_Obligation_OptionAwards-30-JAN-25.csv  ERCOT_tracking_list.csv  cdr.00012301.0000000000000000.20250130.111701.SPPHLZNP6905_20250130_1115.csv
ercot_scraping/: __init__.py  __main__.py  archive_api.py  batched_api.py  column_mappings.py  config.py  create_ercot_tables.py  data_models.py  ercot_api.py  filters.py  initialize_database_tables.py  merge_data.py  queries.py  run.py  store_data.py  utils.py
ercot_scraping/apis/: __init__.py  archive_api.py  async_utils.py  batched_api.py  ercot_api.py
ercot_scraping/config/: column_mappings.py  config.py  queries.py
ercot_scraping/database/: create_ercot_tables.py  data_models.py  merge_data.py  store_data.py
ercot_scraping/utils/: filters.py  logging_utils.py  utils.py
scripts/: 2025-06-04_JM_run-dam-to-latest.py  2025-06-04_JM_run-full-range copy.py  2025-06-04_JM_run-full-range.py  2025-06-18_JM-keep-it-simple-stupid.py  ercot_models.py  improved_ercot_pipeline.py  partition_ercot_db.py  queries.sql  test_parallel_processing.py  update_script.py
src/: ercot_api.py  initialize_database_tables.py
tests/: __init__.py  test_archive_api.py  test_batched_api.py  test_create_ercot_tables.py  test_data_models.py  test_ercot_api.py  test_filters.py  test_initialize_database_tables.py  test_merge_data.py  test_run.py  test_store_data.py  testconf.py
tests/apis/: test_archive_api.py  test_batched_api.py  test_ercot_api.py
tests/config/: __init__.py
tests/database/: test_create_ercot_tables.py  test_data_models.py  test_integration_create_store.py  test_merge_data.py  test_store_data.py
tests/e2e/: test_cli_e2e.py  test_ercot_e2e.py
tests/utils/: test_filters.py  test_logging_utils.py
