[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ercot_scraping"
version = "0.1.0"
dependencies = [
    "pandas",
    "requests",
    "logging",
    "python-dotenv",
    "ratelimit>=2.2.1",
    "python-dateutil==2.9.0.post0",
    "chardet>=5.0.0"
]
requires-python = "==3.11.9 "

[project.scripts]
ercot = "ercot_scraping.run:main"  # Changed from fetch_prices to ercot

[project.optional-dependencies]
test = [
    "pytest>=6.2.4",
    "pytest-cov>=4.1.0",  # Updated version
    "coverage>=7.4.1",    # Updated version
    "pytest-mock>=3.12.0", # Added for better mocking support
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ercot_scraping --cov-report=xml --cov-report=term-missing"
python_files = ["test_*.py", "*_test.py", "test.py", "tests.py"]
python_functions = ["test_*","test"]

[tool.coverage.run]
branch = true
source = ["ercot_scraping"]

[tool.coverage.report]
# Which files to exclude in the report
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    ""
]
