[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ercot_scraping"
version = "0.1.0"
dependencies = [
    "pandas",
    "requests",
    "python-dotenv",
    "ratelimit",
    "chardet",
    "aiosqlite",
    "aiohttp"
]
requires-python = "<=3.11.9 "

[project.scripts]
ercot = "ercot_scraping.run:main"  # Changed from fetch_prices to ercot

[project.optional-dependencies]
test = [
    "pytest>=6.2.4",
    "pytest-cov>=4.1.0",  # Updated version
    "coverage>=7.4.1",    # Updated version
    "pytest-mock>=3.10.0", # Added for better mocking support
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ercot_scraping --cov-report=xml --cov-report=term-missing -v"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
branch = true
source = ["ercot_scraping"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/__pycache__/*",
    "*/setup.py",
    "*/conftest.py", 
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass"
]
show_missing = true
skip_covered = true
sort = "Cover"
